Totally did not cheat on some of this. yeah.

--- a/10_Collections/10_Collections.csproj
+++ b/10_Collections/10_Collections.csproj
@@ -53,8 +53,17 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CollectionsTest.cs" />
+    <Compile Include="IAsset.cs" />
+    <Compile Include="IComparer.cs" />
+    <Compile Include="IStockRepository.cs" />
+    <Compile Include="MemoryStockRepository.cs" />
     <Compile Include="MemoryStockRepositoryTests.cs" />
+    <Compile Include="Portfolio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavingsAccount.cs" />
+    <Compile Include="Stock.cs" />
+    <Compile Include="StockNameComparator.cs" />
+    <Compile Include="StockValueComparator.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
